--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div>
-      <h1>Hmmm 2...</h1>
-      <p>Now let's conquer the world!!</p>
+      <h1>Hello Peoplez of the World!/h1>
+      <p>Can't we all just eat pizza and get along?!</p>
       <button>Click Me</button>
     </div>
     <script src="script.js" type="text/javascript"></script>
