--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div>
-      <h1>Hello Peoplez of the World!/h1>
+      <h1>Hello Peoplez of the World!</h1>
       <p>Can't we all just eat pizza and get along?!</p>
       <button>Click Me</button>
     </div>
